--- a/higher-number-wins.html
+++ b/higher-number-wins.html
@@ -133,24 +133,25 @@
             <ul class="breadcrumb">
                 <li><a href="index.html">首頁</a></li>
                 <li><a href="game.html">Game</a></li>
-                <li>Guess the Number</li>
+                <li>Higher Number Wins</li>
             </ul>
 
             <section id="game">
                 <div class="container">
                     <div class="game-detail card">
                         <div class="card-content">
-                            <div class="game-zone guess-the-number"
-                                style="background-image: url(img/game/guess-the-number/cover.jpg);">
+                            <div class="game-zone higher-number-wins">
                                 <div class="default">
-                                    <h3>Guess the Number</h3>
-                                    <button>Start to play</button>
+                                    <img src="img/game/higher-number-wins/cover.jpg">
+                                    <div class="game-title">
+                                        <h3>Higher Number Wins</h3>
+                                        <button>Start to play</button>
+                                    </div>
                                 </div>
 
                                 <div class="play-game">
-                                    <video autoplay muted loop poster="img/game/guess-the-number/bg.jpg">
-                                        <source src="img/game/guess-the-number/bg.mp4" type="video/mp4">
-                                        <source src="img/game/guess-the-number/bg.webm" type="video/webm">
+                                    <video autoplay muted loop poster="img/game/higher-number-wins/bg.jpg">
+                                        <source src="img/game/higher-number-wins/bg.mp4" type="video/mp4">
                                     </video>
                                     <div class="game-content">
                                         <div class="result">
@@ -162,22 +163,40 @@
                                         <div class="selection">
                                             <div>
                                                 <input id="dice01" type="radio" name="dice" value="dice01">
-                                                <label for="dice01"><img src="img/game/dice/dice01.png"></label>
+                                                <label for="dice01">
+                                                    <img class="bg" src="img/game/higher-number-wins/btn-bg.png">
+                                                    <img class="item" src="img/game/dice/dice01.png">
+                                                </label>
 
                                                 <input id="dice02" type="radio" name="dice" value="dice02">
-                                                <label for="dice02"><img src="img/game/dice/dice02.png"></label>
+                                                <label for="dice02">
+                                                    <img class="bg" src="img/game/higher-number-wins/btn-bg.png">
+                                                    <img class="item" src="img/game/dice/dice02.png">
+                                                </label>
 
                                                 <input id="dice03" type="radio" name="dice" value="dice03">
-                                                <label for="dice03"><img src="img/game/dice/dice03.png"></label>
+                                                <label for="dice03">
+                                                    <img class="bg" src="img/game/higher-number-wins/btn-bg.png">
+                                                    <img class="item" src="img/game/dice/dice03.png">
+                                                </label>
 
                                                 <input id="dice04" type="radio" name="dice" value="dice04">
-                                                <label for="dice04"><img src="img/game/dice/dice04.png"></label>
+                                                <label for="dice04">
+                                                    <img class="bg" src="img/game/higher-number-wins/btn-bg.png">
+                                                    <img class="item" src="img/game/dice/dice04.png">
+                                                </label>
 
                                                 <input id="dice05" type="radio" name="dice" value="dice05">
-                                                <label for="dice05"><img src="img/game/dice/dice05.png"></label>
+                                                <label for="dice05">
+                                                    <img class="bg" src="img/game/higher-number-wins/btn-bg.png">
+                                                    <img class="item" src="img/game/dice/dice05.png">
+                                                </label>
 
                                                 <input id="dice06" type="radio" name="dice" value="dice06">
-                                                <label for="dice06"><img src="img/game/dice/dice06.png"></label>
+                                                <label for="dice06">
+                                                    <img class="bg" src="img/game/higher-number-wins/btn-bg.png">
+                                                    <img class="item" src="img/game/dice/dice06.png">
+                                                </label>
                                             </div>
 
                                             <button class="play"><img src="img/game/btn-play.png"></button>
@@ -187,7 +206,6 @@
 
                                 <div id="game-notice" class="popUp">
                                     <div class="popUp--container">
-                                        <button class="popUp--close"><i class="icon-Close"></i></button>
                                         <h3>Game Result</h3>
                                         <div class="popUp--content">
                                             <p>文字文字文字</p>
@@ -200,7 +218,7 @@
                             </div>
 
                             <div class="content">
-                                <h3>Guess the Number</h3>
+                                <h3>Higher Number Wins</h3>
                                 <div class="desc">
                                     <p>
                                         This is a probability game involving dice rolling. Should the number on your
@@ -219,7 +237,7 @@
                                 </div>
                                 <div class="input-group">
                                     <label for="bets">Bets</label>
-                                    <input name="bets" type="text" value="1">
+                                    <input name="bets" type="text" placeholder="enter your bets" required>
                                 </div>
                                 <div>
                                     <i class="icon-Change"></i> 累積交互次數：5 次
@@ -289,6 +307,9 @@
                 </div>
             </div>
         </div>
+
+        <!-- 遊戲蓋版 -->
+        <div class="full-page"></div>
     </div>
 
 
