--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<div id="app">
 		<div id="mainPage">
 			<header>
-				<a class="main-logo" href="javascript:void(0)"><img src="img/logo.svg"></a>
+				<a class="main-logo" href="javascript:void(0)"><img src="img/logo_name.svg"></a>
 				<div class="options">
 					<button class="menu"></button>
 					<div class="nav">
