--- a/game.html
+++ b/game.html
@@ -63,7 +63,7 @@
 
     <div id="mainPage">
         <header>
-            <a class="main-logo" href="index.html"><img src="img/logo.svg"></a>
+            <a class="main-logo" href="index.html"><img src="img/logo_name.svg"></a>
             <div class="options">
                 <button class="menu"></button>
                 <div class="nav">
@@ -139,125 +139,145 @@
                 <div class="container">
                     <h3>Game</h3>
                     <ul class="game-list">
-                        <li onclick="location='guess-the-number.html'">
-                            <div class="img">
-                                <img src="img/game/guess-the-number/thumb.jpg">
-                            </div>
-                            <h4>Guess the Number</h4>
-                            <ul class="tags">
-                                <li>fortune</li>
-                                <li>dice</li>
-                                <li>&lt; 3 minutes</li>
-                            </ul>
-                            <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                        <li>
+                            <a href="guess-the-number.html">
+                                <div class="img">
+                                    <img src="img/game/guess-the-number/thumb.jpg">
+                                </div>
+                                <h4>Guess the Number</h4>
+                                <ul class="tags">
+                                    <li>fortune</li>
+                                    <li>dice</li>
+                                    <li>&lt; 3 minutes</li>
+                                </ul>
+                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                            </a>
                         </li>
-                        <li onclick="location='bet-big-small.html'">
-                            <div class="img">
-                                <img src="img/game/bet-big-small/thumb.jpg">
-                            </div>
-                            <h4>Bet Big/Small</h4>
-                            <ul class="tags">
-                                <li>tag</li>
-                                <li>tag</li>
-                                <li>tag</li>
-                            </ul>
-                            <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                        <li>
+                            <a href="bet-big-small.html">
+                                <div class="img">
+                                    <img src="img/game/bet-big-small/thumb.jpg">
+                                </div>
+                                <h4>Bet Big/Small</h4>
+                                <ul class="tags">
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                </ul>
+                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                            </a>
                         </li>
-                        <li onclick="location='game-detail.html'">
-                            <div class="img">
-                                <img src="img/game/odd-even-betting/thumb.jpg">
-                            </div>
-                            <h4>Odd/Even Betting</h4>
-                            <ul class="tags">
-                                <li>tag</li>
-                                <li>tag</li>
-                                <li>tag</li>
-                            </ul>
-                            <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                        <li>
+                            <a href="odd-even-betting.html">
+                                <div class="img">
+                                    <img src="img/game/odd-even-betting/thumb.jpg">
+                                </div>
+                                <h4>Odd/Even Betting</h4>
+                                <ul class="tags">
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                </ul>
+                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                            </a>
                         </li>
-                        <li onclick="location='game-detail.html'">
-                            <div class="img">
-                                <img src="img/game/higher-number-wins/thumg.jpg">
-                            </div>
-                            <h4>Higher number wins</h4>
-                            <ul class="tags">
-                                <li>tag</li>
-                                <li>tag</li>
-                                <li>tag</li>
-                            </ul>
-                            <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                        <li>
+                            <a href="higher-number-wins.html">
+                                <div class="img">
+                                    <img src="img/game/higher-number-wins/thumg.jpg">
+                                </div>
+                                <h4>Higher number wins</h4>
+                                <ul class="tags">
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                </ul>
+                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                            </a>
                         </li>
-                        <li onclick="location='game-detail.html'">
-                            <div class="img">
-                                <img src="img/game/game-coming-soon.jpg">
-                            </div>
-                            <h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-                            <ul class="tags">
-                                <li>tag</li>
-                                <li>tag</li>
-                                <li>tag</li>
-                            </ul>
-                            <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                        <li>
+                            <a href="game-detail.html">
+                                <div class="img">
+                                    <img src="img/game/game-coming-soon.jpg">
+                                </div>
+                                <h4>《決勝時刻®：現代戰爭® II 2022》</h4>
+                                <ul class="tags">
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                </ul>
+                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                            </a>
                         </li>
-                        <li onclick="location='game-detail.html'">
-                            <div class="img">
-                                <img src="img/game/game-coming-soon.jpg">
-                            </div>
-                            <h4>Coin Matching</h4>
-                            <ul class="tags">
-                                <li>tag</li>
-                                <li>tag</li>
-                                <li>tag</li>
-                            </ul>
-                            <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                        <li>
+                            <a href="game-detail.html">
+                                <div class="img">
+                                    <img src="img/game/game-coming-soon.jpg">
+                                </div>
+                                <h4>Coin Matching</h4>
+                                <ul class="tags">
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                </ul>
+                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                            </a>
                         </li>
-                        <li onclick="location='game-detail.html'">
-                            <div class="img">
-                                <img src="img/game/game-coming-soon.jpg">
-                            </div>
-                            <h4>Coin Matching</h4>
-                            <ul class="tags">
-                                <li>tag</li>
-                                <li>tag</li>
-                                <li>tag</li>
-                            </ul>
-                            <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                        <li>
+                            <a href="game-detail.html">
+                                <div class="img">
+                                    <img src="img/game/game-coming-soon.jpg">
+                                </div>
+                                <h4>Coin Matching</h4>
+                                <ul class="tags">
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                </ul>
+                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                            </a>
                         </li>
-                        <li onclick="location='game-detail.html'">
-                            <div class="img">
-                                <img src="img/game/game-coming-soon.jpg">
-                            </div>
-                            <h4>Coin Matching</h4>
-                            <ul class="tags">
-                                <li>tag</li>
-                                <li>tag</li>
-                                <li>tag</li>
-                            </ul>
-                            <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                        <li>
+                            <a href="game-detail.html">
+                                <div class="img">
+                                    <img src="img/game/game-coming-soon.jpg">
+                                </div>
+                                <h4>Coin Matching</h4>
+                                <ul class="tags">
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                </ul>
+                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                            </a>
                         </li>
-                        <li onclick="location='game-detail.html'">
-                            <div class="img">
-                                <img src="img/game/game-coming-soon.jpg">
-                            </div>
-                            <h4>Coin Matching</h4>
-                            <ul class="tags">
-                                <li>tag</li>
-                                <li>tag</li>
-                                <li>tag</li>
-                            </ul>
-                            <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                        <li>
+                            <a href="game-detail.html">
+                                <div class="img">
+                                    <img src="img/game/game-coming-soon.jpg">
+                                </div>
+                                <h4>Coin Matching</h4>
+                                <ul class="tags">
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                </ul>
+                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                            </a>
                         </li>
-                        <li onclick="location='game-detail.html'">
-                            <div class="img">
-                                <img src="img/game/game-coming-soon.jpg">
-                            </div>
-                            <h4>Coin Matching</h4>
-                            <ul class="tags">
-                                <li>tag</li>
-                                <li>tag</li>
-                                <li>tag</li>
-                            </ul>
-                            <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                        <li>
+                            <a href="game-detail.html">
+                                <div class="img">
+                                    <img src="img/game/game-coming-soon.jpg">
+                                </div>
+                                <h4>Coin Matching</h4>
+                                <ul class="tags">
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                    <li>tag</li>
+                                </ul>
+                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                            </a>
                         </li>
                     </ul>
                 </div>
