--- a/odd-even-betting.html
+++ b/odd-even-betting.html
@@ -133,61 +133,56 @@
             <ul class="breadcrumb">
                 <li><a href="index.html">首頁</a></li>
                 <li><a href="game.html">Game</a></li>
-                <li>Guess the Number</li>
+                <li>Odd/Even Betting</li>
             </ul>
 
             <section id="game">
                 <div class="container">
                     <div class="game-detail card">
                         <div class="card-content">
-                            <div class="game-zone guess-the-number"
-                                style="background-image: url(img/game/guess-the-number/cover.jpg);">
+                            <div class="game-zone odd-even-betting">
                                 <div class="default">
-                                    <h3>Guess the Number</h3>
-                                    <button>Start to play</button>
+                                    <img src="img/game/odd-even-betting/cover.jpg">
+                                    <div class="game-title">
+                                        <h3>Odd/Even Betting</h3>
+                                        <button>Start to play</button>
+                                    </div>
                                 </div>
 
                                 <div class="play-game">
-                                    <video autoplay muted loop poster="img/game/guess-the-number/bg.jpg">
-                                        <source src="img/game/guess-the-number/bg.mp4" type="video/mp4">
-                                        <source src="img/game/guess-the-number/bg.webm" type="video/webm">
+                                    <video autoplay muted loop poster="img/game/odd-even-betting/bg.jpg">
+                                        <source src="img/game/odd-even-betting/bg.mp4" type="video/mp4">
                                     </video>
                                     <div class="game-content">
                                         <div class="result">
                                             <img src="img/game/dice/dice01.png">
-                                            <!-- <img src="img/game/dice/dice02.png">
-                                            <img src="img/game/dice/dice03.png"> -->
+                                            <img src="img/game/dice/dice02.png">
+                                            <img src="img/game/dice/dice03.png">
                                         </div>
 
                                         <div class="selection">
                                             <div>
-                                                <input id="dice01" type="radio" name="dice" value="dice01">
-                                                <label for="dice01"><img src="img/game/dice/dice01.png"></label>
-
-                                                <input id="dice02" type="radio" name="dice" value="dice02">
-                                                <label for="dice02"><img src="img/game/dice/dice02.png"></label>
-
-                                                <input id="dice03" type="radio" name="dice" value="dice03">
-                                                <label for="dice03"><img src="img/game/dice/dice03.png"></label>
-
-                                                <input id="dice04" type="radio" name="dice" value="dice04">
-                                                <label for="dice04"><img src="img/game/dice/dice04.png"></label>
-
-                                                <input id="dice05" type="radio" name="dice" value="dice05">
-                                                <label for="dice05"><img src="img/game/dice/dice05.png"></label>
-
-                                                <input id="dice06" type="radio" name="dice" value="dice06">
-                                                <label for="dice06"><img src="img/game/dice/dice06.png"></label>
+                                                <input id="big" type="radio" name="bet" value="big">
+                                                <label for="big">
+                                                    <img class="bg" src="img/game/odd-even-betting/btn-bg.png">
+                                                    <img class="item" src="img/game/odd-even-betting/item-odd.png">
+                                                </label>
                                             </div>
 
                                             <button class="play"><img src="img/game/btn-play.png"></button>
+                                            <div>
+                                                <input id="small" type="radio" name="bet" value="small">
+                                                <label for="small">
+                                                    <img class="bg" src="img/game/odd-even-betting/btn-bg.png">
+                                                    <img class="item" src="img/game/odd-even-betting/item-even.png">
+                                                </label>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
 
                                 <div id="game-notice" class="popUp">
                                     <div class="popUp--container">
-                                        <button class="popUp--close"><i class="icon-Close"></i></button>
                                         <h3>Game Result</h3>
                                         <div class="popUp--content">
                                             <p>文字文字文字</p>
@@ -200,7 +195,7 @@
                             </div>
 
                             <div class="content">
-                                <h3>Guess the Number</h3>
+                                <h3>Odd/Even Betting</h3>
                                 <div class="desc">
                                     <p>
                                         This is a probability game involving dice rolling. Should the number on your
@@ -219,7 +214,7 @@
                                 </div>
                                 <div class="input-group">
                                     <label for="bets">Bets</label>
-                                    <input name="bets" type="text" value="1">
+                                    <input name="bets" type="text" placeholder="enter your bets" required>
                                 </div>
                                 <div>
                                     <i class="icon-Change"></i> 累積交互次數：5 次
@@ -289,6 +284,9 @@
                 </div>
             </div>
         </div>
+
+        <!-- 遊戲蓋版 -->
+        <div class="full-page"></div>
     </div>
 
 
