小遊戲微調 & 增加 loading

--- a/index.html
+++ b/index.html
@@ -548,6 +548,23 @@
 					</div> -->
 				</div>
 			</div>
+
+
+			<div class="loading full">
+				<div class="loading-container">
+					<div class="loading-rotate">
+						<div class="rotate">
+							<svg width="105" height="105" viewBox="0 0 105 105" fill="none"
+								xmlns="http://www.w3.org/2000/svg">
+								<path fill-rule="evenodd" clip-rule="evenodd"
+									d="M47.4076 0.747576C55.8502 -0.0752323 64.3665 1.15996 72.2275 4.34742C80.0885 7.53489 87.0601 12.5797 92.5456 19.05C98.031 25.5204 101.867 33.2236 103.725 41.5002C105.583 49.7769 105.408 58.3805 103.215 66.5747L98.3847 65.2819C100.369 57.8681 100.528 50.0838 98.8465 42.5954C97.1654 35.107 93.6947 28.1375 88.7317 22.2834C83.7687 16.4293 77.4611 11.8649 70.3487 8.981C63.2364 6.09711 55.5311 4.97955 47.8926 5.724L47.4076 0.747576Z" />
+							</svg>
+						</div>
+						<img src="img/logo.svg">
+					</div>
+					<div class="loading-title">Loading...</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
