--- a/guess-the-number.html
+++ b/guess-the-number.html
@@ -147,6 +147,17 @@
                                         <h3>Guess the Number</h3>
                                         <button>Start to play</button>
                                     </div>
+
+                                    <!-- 區塊 Loading -->
+                                    <div class="loading section">
+                                        <div class="loading-container">
+                                            <div class="loading-spinner">
+                                                <span></span>
+                                                <img src="img/logo.svg">
+                                            </div>
+                                            <div class="loading-title">Loading...</div>
+                                        </div>
+                                    </div>
                                 </div>
 
                                 <div class="play-game">
@@ -309,7 +320,7 @@
             </div>
         </div>
 
-        <!-- 遊戲蓋版 -->
+        <!-- 遊戲中蓋版 (禁止操作網頁) -->
         <div class="full-page"></div>
     </div>
 
