更新遊戲內頁右側資訊

--- a/personal.html
+++ b/personal.html
@@ -623,8 +623,10 @@
 
         <!-- toast -->
         <!-- 超過可提領額度 -->
-        <div id="overtake" class="toast">
-            餘額不足
+        <div class="toast-container">
+            <div id="overtake" class="toast warning">
+                餘額不足
+            </div>
         </div>
     </div>
 
