--- a/guess-the-number.html
+++ b/guess-the-number.html
@@ -147,17 +147,6 @@
                                         <h3>Guess the Number</h3>
                                         <button>Start to play</button>
                                     </div>
-
-                                    <!-- 區塊 Loading -->
-                                    <div class="loading section">
-                                        <div class="loading-container">
-                                            <div class="loading-spinner">
-                                                <span></span>
-                                                <img src="img/logo.svg">
-                                            </div>
-                                            <div class="loading-title">Loading...</div>
-                                        </div>
-                                    </div>
                                 </div>
 
                                 <div class="play-game">
@@ -214,6 +203,29 @@
                                             <button class="play"><img src="img/game/btn-play.png"></button>
                                         </div>
                                     </div>
+
+                                    <!-- toast -->
+                                    <div class="toast-container">
+                                        <!-- 未選擇賭注 -->
+                                        <div id="no-select" class="toast warning">
+                                            請選擇賭注
+                                        </div>
+
+                                        <!-- 未輸入賭本 -->
+                                        <div id="no-value" class="toast warning">
+                                            請輸入賭本
+                                        </div>
+
+                                        <!-- 未輸入正整數 -->
+                                        <div id="wrong-value" class="toast warning">
+                                            請輸入正整數
+                                        </div>
+
+                                        <!-- 超過可提領額度 -->
+                                        <div id="exceed" class="toast warning">
+                                            餘額不足
+                                        </div>
+                                    </div>
                                 </div>
 
                                 <div id="game-notice" class="popUp">
@@ -240,19 +252,35 @@
                                         computer's, the system shall seize your wager.
                                     </p>
                                 </div>
-                                <div class="input-group">
-                                    <label for="odds">
-                                        Odds
-                                        <i class="icon-InfoCircle popUp--open" for="info"></i>
-                                    </label>
-                                    <input name="odds" type="text" value="xN.NN" disabled>
+                                <div class="awards">
+                                    <div class="louder"><i class="icon-Loudspeaker"></i></div>
+                                    <div class="swiper award-list">
+                                        <div class="swiper-wrapper">
+                                            <div class="swiper-slide">“0x610...e258a”winning 243 $ZKZ！</div>
+                                            <div class="swiper-slide">“0x482...s100d”winning 123 $ZKZ！</div>
+                                            <div class="swiper-slide">“0x889...v207m”winning 63 $ZKZ！</div>
+                                            <div class="swiper-slide">"0x8e2...e2c3w”winning 60 $ZKZ！</div>
+                                            <div class="swiper-slide">"0xe21...rjs14”winning 50 $ZKZ！</div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="input-group">
-                                    <label for="bets">Bets</label>
-                                    <input name="bets" type="text" placeholder="enter your bets" required>
+                                <div class="odd-n-bet">
+                                    <div class="odds">
+                                        <label>
+                                            Odds
+                                            <i class="icon-InfoCircle popUp--open" for="info"></i>
+                                        </label>
+                                        <h3>xN.NN</h3>
+                                    </div>
+                                    <div class="bets">
+                                        <label for="bets">Bets</label>
+                                        <input name="bets" type="number" placeholder="Enter your Bets" required>
+                                        <span class="helper">$ZKZ數量為 300</span>
+                                    </div>
                                 </div>
-                                <div>
-                                    <i class="icon-Change"></i> 累積交互次數：5 次
+                                <div class="count">
+                                    累積交互次數：5 次
+                                    <button class="btn-tertiary"><i class="icon-Change"></i></button>
                                 </div>
                             </div>
                         </div>
@@ -339,13 +367,43 @@
     </script>
 
     <!-- Custom settings -->
-    <script src="js/navigation.js"></script>å
+    <script src="js/navigation.js"></script>
     <script src="js/dropdown.js"></script>
     <script src="js/fulldown.js"></script>
     <script src="js/tab.js"></script>
     <script src="js/popUp.js"></script>
     <script src="js/connect-wallet.js"></script>
     <script src="js/game.js"></script>
+
+
+    <!-- Swiper 套件 -->
+    <script src="vendor/swiper/swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper(".award-list", {
+            direction: "vertical",
+            slidesPerView: 3,
+            slidesPerGroup: 1,
+            spaceBetween: 8,
+            loop: true,
+            autoplay: {
+                delay: 3000,
+                disableOnInteraction: false,
+            },
+            on: {
+                touchMove: function (e) {
+                    e.preventDefault();
+                },
+            },
+            breakpoints: {
+                1025: {
+                    slidesPerView: 2,
+                },
+                1281: {
+                    slidesPerView: 3,
+                },
+            },
+        });
+    </script>
 </body>
 
 </html>
