微調麵包屑 & 遊戲框導角

--- a/game.html
+++ b/game.html
@@ -131,7 +131,7 @@
 
         <main class="innerPage">
             <ul class="breadcrumb">
-                <li onclick="location='index.html'">首頁</li>
+                <li><a href="index.html">首頁</a></li>
                 <li>Game</li>
             </ul>
 
