--- a/shop.html
+++ b/shop.html
@@ -68,11 +68,11 @@
                 <button class="menu"></button>
                 <div class="nav">
                     <ul>
-                        <li>商城</li>
-                        <li onclick="location='game.html'">Game</li>
-                        <li onclick="location='index.html#nft-idx'">NFT</li>
-                        <li onclick="location='index.html#tutorial'">教學</li>
-                        <li onclick="location='index.html#zkz'">$ZKZ</li>
+                        <li><a href="shop.html">商城</a></li>
+                        <li><a href="game.html">Game</a></li>
+                        <li><a href="index.html#nft-idx">NFT</a></li>
+                        <li><a href="index.html#tutorial">教學</a></li>
+                        <li><a href="index.html#zkz">$ZKZ</a></li>
                         <li for="bridge" class="dropdown">
                             <button>Bridge</button>
                             <div class="dropdown-content">
@@ -102,12 +102,15 @@
                             <button>繁體中文</button>
                             <div class="dropdown-content">
                                 <ul>
-                                    <li class="active">繁體中文</li>
-                                    <li>English</li>
-                                    <li>日本語</li>
+                                    <li class="active"><a href="javascript:void()">繁體中文</a></li>
+                                    <li><a href="javascript:void()">English</a></li>
+                                    <li><a href="javascript:void()">日本語</a></li>
                                 </ul>
                             </div>
                         </li>
+                        <!-- <li>
+                            <a href="https://twitter.com/ZKaizoku_" target="_blank"><i class="icon-Twitter"></i> Twitter</a>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -118,8 +121,8 @@
                     <button>0x130...123DxA</button>
                     <div class="dropdown-content">
                         <ul>
-                            <li onclick="location='personal.html'">個人資訊</li>
-                            <li>登出</li>
+                            <li><a href="personal.html">個人資訊</a></li>
+                            <li><a href="javascript:void()">登出</a></li>
                         </ul>
                     </div>
                 </div>
@@ -128,7 +131,7 @@
 
         <main class="innerPage">
             <ul class="breadcrumb">
-                <li onclick="location='index.html'">首頁</li>
+                <li><a href="index.html">首頁</a></li>
                 <li>商城</li>
             </ul>
 
