微調小網遊戲畫面 & 英文翻譯

--- a/bet-big-small.html
+++ b/bet-big-small.html
@@ -343,7 +343,7 @@
     </script>
 
     <!-- Custom settings -->
-    <script src="js/navigation.js"></script>å
+    <script src="js/navigation.js"></script>
     <script src="js/dropdown.js"></script>
     <script src="js/fulldown.js"></script>
     <script src="js/tab.js"></script>
