--- a/guess-the-number.html
+++ b/guess-the-number.html
@@ -145,6 +145,7 @@
                                     <img src="img/game/guess-the-number/cover.jpg">
                                     <div class="game-title">
                                         <h3>Guess the Number</h3>
+                                        <!-- ↓若還沒連結錢包則先跳出連結錢包的彈窗 -->
                                         <button>Start to play</button>
                                     </div>
                                 </div>
@@ -208,31 +209,31 @@
                                     <div class="toast-container">
                                         <!-- 未選擇賭注 -->
                                         <div id="no-select" class="toast warning">
-                                            請選擇賭注
+                                            Please select any wager.
                                         </div>
 
                                         <!-- 未輸入賭本 -->
                                         <div id="no-value" class="toast warning">
-                                            請輸入賭本
+                                            Please enter the bets.
                                         </div>
 
                                         <!-- 未輸入正整數 -->
                                         <div id="wrong-value" class="toast warning">
-                                            請輸入正整數
+                                            Please enter a positive integer.
                                         </div>
 
                                         <!-- 超過可提領額度 -->
                                         <div id="exceed" class="toast warning">
-                                            餘額不足
+                                            Insufficient balance.
                                         </div>
                                     </div>
                                 </div>
 
                                 <div id="game-notice" class="popUp">
                                     <div class="popUp--container">
-                                        <h3>Game Result</h3>
+                                        <h3>Win</h3>
                                         <div class="popUp--content">
-                                            <p>文字文字文字</p>
+                                            <p>Earn Points：10</p>
                                         </div>
                                         <div class="popUp--btns">
                                             <button class="submit replay">Replay</button>
@@ -268,7 +269,7 @@
                                     <div class="odds">
                                         <label>
                                             Odds
-                                            <i class="icon-InfoCircle popUp--open" for="info"></i>
+                                            <i class="icon-InfoCircle popUp--open" for="odds"></i>
                                         </label>
                                         <h3>xN.NN</h3>
                                     </div>
@@ -345,6 +346,21 @@
                     <button class="btn-tertiary close">取消</button>
                     <button class="submit">確認</button>
                 </div>
+            </div>
+        </div>
+
+        <!-- pop up Odds -->
+        <div id="odds" class="popUp">
+            <div class="popUp--container">
+                <button class="popUp--close"><i class="icon-Close"></i></button>
+                <h3>Odds information</h3>
+                <div class="popUp--content">
+                    <p>This odds already include a 3% House Edge.</p>
+                </div>
+                <!-- <div class="popUp--btns">
+                    <button class="btn-tertiary close">取消</button>
+                    <button class="submit">確認</button>
+                </div> -->
             </div>
         </div>
 
