--- a/higher-number-wins.html
+++ b/higher-number-wins.html
@@ -327,7 +327,7 @@
     </script>
 
     <!-- Custom settings -->
-    <script src="js/navigation.js"></script>å
+    <script src="js/navigation.js"></script>
     <script src="js/dropdown.js"></script>
     <script src="js/fulldown.js"></script>
     <script src="js/tab.js"></script>
